# oiseau

./: .clang-format  .clang-tidy  .cmake-format  .cmake-format.yaml  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  version
.github/docker/oiseau-addlicense/: Dockerfile
.github/docker/oiseau-baseline-builder/: Dockerfile
.github/docker/oiseau-prettier/: Dockerfile
.github/workflows/: cmake.yml  docker-addlicense.yml  docker-builder.yml  docker-prettier.yml  website.yml
benchmark/: CMakeLists.txt  benchmark_dot_layout.cpp  benchmark_oiseau.cpp  benchmark_xtensor.cpp
cmake/: Coverage.cmake
demo/: CMakeLists.txt  io.cpp  logging.cpp  mesh.cpp  nodaldg.cpp  plotting.cpp
demo/meshes/: mesh.msh  mesh2d_split_triangles_quads.msh  mesh2d_split_triangles_quads.py  mesh3d_tetra_block.msh  mesh3d_tetra_block.py  mesh3d_tetra_hexa_block.msh  mesh3d_tetra_hexa_block.py
doc/: CMakeLists.txt  Doxyfile.in  mainpage.dox
include/: oiseau.h
python/: .gitignore  CMakeLists.txt  build.py  pyproject.toml
python/demo/: mesh.py
python/oiseau/: __init__.py  mesh.py
python/oiseau/wrappers/: io.cpp  mesh.cpp  oiseau.cpp
python/test/: __init__.py  test_oiseau.py
src/: CMakeLists.txt
src/mesh/: cell.cpp
src/oiseau/: utils.h
src/oiseau/dg/: dg_space.cpp  dg_space.hpp  function_space.cpp  function_space.hpp
src/oiseau/dg/nodal/: element.cpp  element.hpp  ref_element.cpp  ref_element.hpp  ref_elements.cpp  ref_elements.hpp  ref_hexahedron.cpp  ref_hexahedron.hpp  ref_line.cpp  ref_line.hpp  ref_quadrilateral.cpp  ref_quadrilateral.hpp  ref_tetrahedron.cpp  ref_tetrahedron.hpp  ref_triangle.cpp  ref_triangle.hpp  utils.cpp  utils.hpp
src/oiseau/io/: gmsh.cpp  gmsh.hpp  gmsh_file.cpp  gmsh_file.hpp  gmsh_parser.cpp  gmsh_parser.hpp
src/oiseau/mesh/: cell.cpp  cell.h  cell.hpp  dgmesh.hpp  geometry.cpp  geometry.h  geometry.hpp  mesh.cpp  mesh.h  mesh.hpp  topology.cpp  topology.hpp
src/oiseau/plotting/: pyplot.cpp  pyplot.hpp  triplot.cpp  triplot.hpp
src/oiseau/utils/: helper.hpp  integration.cpp  integration.hpp  jagged_array.hpp  logging.cpp  logging.hpp  math.cpp  math.h  math.hpp  mdarray.hpp
test/: CMakeLists.txt  macros.cmake  test_mesh.cpp  test_utils.cpp
test/dg/: CMakeLists.txt
test/dg/nodal/: CMakeLists.txt  test_ref_element.cpp  test_ref_hexahedron.cpp  test_ref_line.cpp  test_ref_quadrilateral.cpp  test_ref_tetrahedron.cpp  test_ref_triangle.cpp  test_utils.cpp
test/io/: CMakeLists.txt  test_gmsh.cpp  test_gmsh_file.cpp
test/mesh/: CMakeLists.txt  test_cell.cpp
test/misc/: CMakeLists.txt  test_mdspan.cpp
test/oiseau/: test_macros.hpp
test/utils/: CMakeLists.txt  test_integration.cpp  test_jagged_array.cpp  test_math.cpp
tools/: code_status.sh  tidy.sh
tools/templates/: new.cpp  new.hpp  oiseau-templates-nvim.lua  oiseau-templates.lua  test-new.cpp
tools/templates/license/: oiseau.gpl3.tpl
website/: CMakeLists.txt  index.html
website/coverage/: custom.css
website/oiseau/: index.html
