[tool.poetry]
name = "oiseau"
version = "0.1.0"
description = ""
authors = ["tiagovla <tiagovla@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.4"
scipy = "^1.8.1"
gmsh = "^4.10.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
