[tool.poetry]
name = "oiseau"
version = "0.1.0"
description = ""
authors = ["tiagovla <tiagovla@gmail.com>"]
readme = "README.md"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
numpy = "^1.22.4"
scipy = "^1.8.1"
gmsh = { version = "^4.10.3", optional = true }
matplotlib = { version = "^3.5.2", optional = true }
setuptools = "^68.2.2"
ninja = "^1.11.1.4"

[poetry.group.dev.dependencies]
pytest = "^7.1.2"
ninja = "^1.10.2"

[build-system]
requires = ["ninja", "setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
