# Copyright (C) 2025 Tiago V. L. Amorim (@tiagovla)
#
# This file is part of oiseau (https://github.com/tiagovla/oiseau)
#
# SPDX-License-Identifier: GPL-3.0-or-later

include(GoogleTest)

include(macros.cmake)

add_subdirectory(dg)
add_subdirectory(io)
add_subdirectory(mesh)
add_subdirectory(utils)
